# beam

./: README.md  pyproject.toml
beam/: beam.py
beam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
